# niov-foundation

./: .cursorrules  .dockerignore  .env.example  .env.test  .env.test.local.example  .formatter.exs  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  CURRENT_BUILD_STATE.md  Dockerfile  README.md  claude.md  docker-compose.local.yml  docker-compose.test.yml  mix.exs  package-lock.json  package.json  render.yaml  tsconfig.json  typedoc.json  vitest.config.ts  vitest.integration.config.ts  vitest.real-llm.config.ts  vitest.unit.config.ts
.husky/: pre-commit
apps/: README.md
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: AUDIT_RETENTION_POSTURE.md  COMPLIANCE_ARCHITECTURE_REVIEW.md  CURRENT_BUILD_STATE.md  FIPS_DEPLOYMENT_POSTURE.md  NEXT_ACTION.md  RELEASE_DEPLOY_DISCIPLINE.md  STRUCTURED_LOGGING_SCHEMA.md  avp-positive-smoke-seed-endpoint.md  live5-latest-sanitized-result.tmp.md  monetization.md
scripts/: activate-cohort-access-request-prod-schema.ts  activate-cohort-contribution-prod-schema.ts  activate-cohort-prod-schema.ts  activate-decision-rights-prod-schema.ts  activate-handoffs-prod-schema.ts  demo-seed.ts  (+59 more)
services/python-intelligence/: Dockerfile  README.md  pyproject.toml
services/python-intelligence/app/: __init__.py  analytics.py  draft_tone.py  enricher.py  forecaster.py  main.py  meeting.py  ranker.py  rerank.py  risk.py  schemas.py
services/python-intelligence/tests/: test_analytics.py  test_draft_tone.py  test_enricher.py  test_forecaster.py  test_health.py  test_meeting.py  test_ranker.py  test_rerank.py  test_risk.py
(+1316 files in other folders)
